--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Notícias da Cidade</title>
 </head>
-<body>
+<body id="home" class="tre-colunas">
     
+    <div id="container"> <!--inicio do container-->
+        <div id="topo">  <!--inicio do topo-->
+            <h1 class="logo">Notícias Cidade</h1>
+            <ul id="navegacao">
+                <li class="primeiro">
+                    <a class="home" href="index.html">Home</a>
+                </li>
+                <li><a class="brasil" href="brasil.html">Brasil</a>
+                </li>
+                <li><a class="internacional" href="internacional.html">Internacional</a>
+                </li>
+                <li><a class="economia" href="economia.html">Economia</a>
+                </li>
+                <li><a class="saude" href="saude.html">Saúde</a>
+                </li>
+                <li><a class="ciencia" href="ciencia.html">Ciência</a>
+                </li>
+                <li><a class="fotos" href="fotos.html">Fotos</a>
+                </li>
+            </ul>
+        </div> <!--final topo-->
+
+        <div id="conteudo"> <!--inicio do conteudo-->
+
+            <div class="primario">Primário</div>
+            <div class="secundario">Secundário</div>
+            <div class="lateral">Lateral</div>
+
+        </div> <!--final do conteudo -->
+
+    </div> <!--final container-->
+
+    <div id="footer" style="clear: both;"> <!--Footer-->
+        <div id="rodape">
+            &copy; Copyright 2000-2020 Notícias Cidade - Josiley Cesario Praxedes
+        </div>
+    </div>
+
 </body>
 </html>
