--- a/fotos.html
+++ b/fotos.html
@@ -6,26 +6,26 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Notícias da Cidade</title>
 </head>
-<body id="home">
+<body id="fotos" class="uma-coluna">
     
     <div id="container"> <!--inicio do container-->
         <div id="topo">  <!--inicio do topo-->
             <h1 class="logo">Notícias Cidade</h1>
             <ul id="navegacao">
                 <li class="primeiro">
-                    <a class="home" href="index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
-                <li><a class="brasil" href="brasil.html">Brasil</a>
+                <li><a href="brasil.html">Brasil</a>
                 </li>
                 <li><a class="fotos" href="fotos.html">Fotos</a>
                 </li>
-                <li><a class="internacional" href="internacional.html">Internacional</a>
+                <li><a href="internacional.html">Internacional</a>
                 </li>
-                <li><a class="economia" href="economia.html">Economia</a>
+                <li><a href="economia.html">Economia</a>
                 </li>
-                <li><a class="saude" href="saude.html">Saúde</a>
+                <li><a href="saude.html">Saúde</a>
                 </li>
-                <li><a class="ciencia" href="ciencia.html">Ciência</a>
+                <li><a href="ciencia.html">Ciência</a>
                 </li>
             </ul>
         </div> <!--final topo-->
@@ -33,16 +33,8 @@
         <div id="conteudo"> <!--inicio do conteudo-->
 
             <div class="primario">Primário</div>
-            <div class="secundario">Secundário</div>
-            <div class="lateral">
-                <div class="caixa">
-                    <h2>Entrevistas</h2>
-                    <div class="caixa-conteudo">
-                        Conteúdo
-                    </div>
-                </div>
-            </div><!--final da lateral-->
         </div> <!--final do conteudo -->
+
     </div> <!--final container-->
 
     <div id="footer" style="clear: both;"> <!--Footer-->
