--- a/index.html
+++ b/index.html
@@ -32,22 +32,70 @@
 
         <div id="conteudo"> <!--inicio do conteudo-->
 
-            <div class="primario">Primário</div>
-            <div class="secundario">Secundário</div>
+            <div class="primario">
+                <div class="caixa">
+                    <h2>Principal</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+            </div>
+
+            <div class="secundario">
+                <div class="caixa">
+                    <h2>Secundário</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+            </div>
+
             <div class="lateral">
                 <div class="caixa">
                     <h2>Entrevistas</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo
+                        <ul>
+                            <li><a href="">José Almeida</a></li>
+                            <li><a href="">Lauriani Praxedes</a></li>
+                            <li><a href="">Rita Cardoso</a></li>
+                            <li><a href="">André Carlos</a></li>
+                            <li><a href="">Marcio Mello</a></li>
+                            <li><a href="">João Pedro</a></li>
+                            <li><a href="">Fernando Weiss</a></li>
+                            <li><a href="">Lucimar Luciana</a></li>
+
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>News</h2>
+                    <div class="caixa-conteudo">
+                        <form action="">
+                            <div>
+                                <label for="">Email:</label>
+                                <input type="email" name="email" id="email" placeholder="E-mail">
+                            </div>
+                            <div>
+                                <input type="button" value="Enviar">
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div><!--final da lateral-->
+
         </div> <!--final do conteudo -->
     </div> <!--final container-->
 
     <div id="footer" style="clear: both;"> <!--Footer-->
         <div id="rodape">
-            &copy; Copyright 2000-2020 Notícias Cidade - Josiley Cesario Praxedes
+            &copy; Copyright 2000-2020 Notícias Cidade - Josiley Cesario Praxedes Alvim
         </div>
     </div>
 
