--- a/index.html
+++ b/index.html
@@ -32,31 +32,106 @@
 
         <div id="conteudo"> <!--inicio do conteudo-->
 
-            <div class="primario">
-                <div class="caixa">
-                    <h2>Principal</h2>
+            <div class="primario"> <!--inicio primario-->
+                <div class="caixa destaque">
+                    <h2>Destaques</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+                        <h3>Nova legislação</h3>
+                        <img class="imagem-principal" src="image/taxi.jpg" alt="Dois táxi amarelos" width="100%">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...
+                        </p>
+                        <a href="">Continue lendo...</a>
                     </div>
                 </div>
-            </div>
 
-            <div class="secundario">
                 <div class="caixa">
-                    <h2>Secundário</h2>
+                    <h2>Mundo</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="image/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="image/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="image/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="image/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            
+                        </ul>
                     </div>
                 </div>
-            </div>
+            </div><!--final do primario-->
 
-            <div class="lateral">
+            <div class="secundario"> <!--inicio secundario-->
+                <div class="caixa entrevista">
+                    <h2>Última Entrevista</h2>
+                    <div class="caixa-conteudo">
+                        <h3>Entrevista com Felipe Silva</h3>
+                        <img class="imagem-principal" src="image/doutor.jpg" alt="Dois táxi amarelos" width="100%">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...
+                        </p>
+                        <a href="">Continue lendo...</a>
+                    </div>
+                </div>
+                <div class="caixa">
+                    <h2>Notícias Recentes</h2>
+                    <div class="caixa-conteudo">
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="image/cidade.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="image/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="image/doutor.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="image/taxi.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                </div>
+            </div><!--final do scundario-->
+
+            <div class="lateral"><!--inicio da lateral-->
                 <div class="caixa">
                     <h2>Entrevistas</h2>
                     <div class="caixa-conteudo">
@@ -67,7 +142,6 @@
                             <li><a href="">André Carlos</a></li>
                             <li><a href="">Marcio Mello</a></li>
                             <li><a href="">João Pedro</a></li>
-                            <li><a href="">Fernando Weiss</a></li>
                             <li><a href="">Lucimar Luciana</a></li>
 
                         </ul>
@@ -83,7 +157,7 @@
                                 <input type="email" name="email" id="email" placeholder="E-mail">
                             </div>
                             <div>
-                                <input type="button" value="Enviar">
+                                <input class="submit" type="button" value="Enviar">
                             </div>
                         </form>
                     </div>
