--- a/fotos.html
+++ b/fotos.html
@@ -31,8 +31,18 @@
         </div> <!--final topo-->
 
         <div id="conteudo"> <!--inicio do conteudo-->
-
-            <div class="primario">Primário</div>
+            <div class="primario"> <!--inicio primario-->
+                <div class="caixa destaque">
+                    <h2>Titulo da Notícia</h2>
+                    <div class="caixa-conteudo">
+                        <h3>Pequeno resumo da notícia! - Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus atque facere cum consequatur</h3>
+                        <img class="imagem-principal" src="image/taxi.jpg" alt="Dois táxi amarelos" width="100%">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus atque facere cum consequatur numquam obcaecati distinctio harum impedit et commodi libero non, labore adipisci, dolorem maiores tempore. Fuga, ipsa?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi officiis voluptatibus eos. Earum, corporis? Distinctio magnam officiis dolorem delectus quae. Quo laudantium doloremque, explicabo maxime dolore amet officia nihil assumenda.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div> <!--final do conteudo -->
 
     </div> <!--final container-->
