--- a/brasil.html
+++ b/brasil.html
@@ -32,8 +32,88 @@
 
         <div id="conteudo"> <!--inicio do conteudo-->
 
-            <div class="primario">Primário</div>
-            <div class="lateral">Lateral</div>
+            <div class="primario"> <!--inicio primario-->
+                <div class="caixa destaque">
+                    <h2>Titulo da Notícia</h2>
+                    <div class="caixa-conteudo">
+                        <h3>Pequeno resumo da notícia! - Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus atque facere cum consequatur</h3>
+                        <img class="imagem-principal" src="image/taxi.jpg" alt="Dois táxi amarelos" width="100%">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus atque facere cum consequatur numquam obcaecati distinctio harum impedit et commodi libero non, labore adipisci, dolorem maiores tempore. Fuga, ipsa?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi officiis voluptatibus eos. Earum, corporis? Distinctio magnam officiis dolorem delectus quae. Quo laudantium doloremque, explicabo maxime dolore amet officia nihil assumenda.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>Notícias Recentes</h2>
+                    <div class="caixa-conteudo">
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="image/cidade.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="image/tecnologia.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="image/doutor.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="image/taxi.jpg" alt="" width="80">
+                                    <h3>Novas tecnólogias</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </a>
+                            </li>
+                            
+                        </ul>
+                    </div>
+                </div>
+            </div><!--final do primario-->
+
+            <div class="lateral"><!--inicio da lateral-->
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        <ul>
+                            <li><a href="">José Almeida</a></li>
+                            <li><a href="">Lauriani Praxedes</a></li>
+                            <li><a href="">Rita Cardoso</a></li>
+                            <li><a href="">André Carlos</a></li>
+                            <li><a href="">Marcio Mello</a></li>
+                            <li><a href="">João Pedro</a></li>
+                            <li><a href="">Lucimar Luciana</a></li>
+
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>News</h2>
+                    <div class="caixa-conteudo">
+                        <form action="">
+                            <div>
+                                <label for="">Email:</label>
+                                <input type="email" name="email" id="email" placeholder="E-mail">
+                            </div>
+                            <div>
+                                <input class="submit" type="button" value="Enviar">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div><!--final da lateral-->
 
         </div> <!--final do conteudo -->
 
