--- a/brasil.html
+++ b/brasil.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Notícias da Cidade</title>
 </head>
-<body id="home" class="duas-colunas">
+<body id="brasil" class="duas-colunas">
     
     <div id="container"> <!--inicio do container-->
         <div id="topo">  <!--inicio do topo-->
