--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <img class="imagem-principal" src="image/taxi.jpg" alt="Dois táxi amarelos" width="100%">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...
                         </p>
-                        <a href="">Continue lendo...</a>
+                        <a href="brasil.html">Continue lendo...</a>
                     </div>
                 </div>
 
