--- a/fotos.html
+++ b/fotos.html
@@ -1,57 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Notícias da Cidade</title>
-</head>
-<body id="fotos" class="uma-coluna">
-    
-    <div id="container"> <!--inicio do container-->
-        <div id="topo">  <!--inicio do topo-->
-            <h1 class="logo">Notícias Cidade</h1>
-            <ul id="navegacao">
-                <li class="primeiro">
-                    <a href="index.html">Home</a>
-                </li>
-                <li><a href="brasil.html">Brasil</a>
-                </li>
-                <li><a class="fotos" href="fotos.html">Fotos</a>
-                </li>
-                <li><a href="internacional.html">Internacional</a>
-                </li>
-                <li><a href="economia.html">Economia</a>
-                </li>
-                <li><a href="saude.html">Saúde</a>
-                </li>
-                <li><a href="ciencia.html">Ciência</a>
-                </li>
-            </ul>
-        </div> <!--final topo-->
+  </head>
+  <body id="fotos" class="uma-coluna">
+    <div id="container">
+      <!--inicio do container-->
+      <div id="topo">
+        <!--inicio do topo-->
+        <h1 class="logo">Notícias Cidade</h1>
+        <ul id="navegacao">
+          <li class="primeiro">
+            <a href="index.html">Home</a>
+          </li>
+          <li><a href="brasil.html">Brasil</a></li>
+          <li><a class="fotos" href="fotos.html">Fotos</a></li>
+          <li><a href="internacional.html">Internacional</a></li>
+          <li><a href="economia.html">Economia</a></li>
+          <li><a href="saude.html">Saúde</a></li>
+          <li><a href="ciencia.html">Ciência</a></li>
+        </ul>
+      </div>
+      <!--final topo-->
 
-        <div id="conteudo"> <!--inicio do conteudo-->
-            <div class="primario"> <!--inicio primario-->
-                <div class="caixa destaque">
-                    <h2>Titulo da Notícia</h2>
-                    <div class="caixa-conteudo">
-                        <h3>Pequeno resumo da notícia! - Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus atque facere cum consequatur</h3>
-                        <img class="imagem-principal" src="image/taxi.jpg" alt="Dois táxi amarelos" width="100%">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus atque facere cum consequatur numquam obcaecati distinctio harum impedit et commodi libero non, labore adipisci, dolorem maiores tempore. Fuga, ipsa?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi officiis voluptatibus eos. Earum, corporis? Distinctio magnam officiis dolorem delectus quae. Quo laudantium doloremque, explicabo maxime dolore amet officia nihil assumenda.
-                        </p>
-                    </div>
-                </div>
+      <div id="conteudo">
+        <!--inicio do conteudo-->
+        <div class="primario">
+          <!--inicio primario-->
+          <div class="caixa destaque">
+            <h2>Titulo da Notícia</h2>
+            <div class="caixa-conteudo">
+              <h3>
+                Pequeno resumo da notícia! - Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Iure possimus atque facere cum
+                consequatur
+              </h3>
+              <img
+                class="imagem-principal"
+                src="image/taxi.jpg"
+                alt="Dois táxi amarelos"
+                width="100%"
+              />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+                possimus atque facere cum consequatur numquam obcaecati
+                distinctio harum impedit et commodi libero non, labore adipisci,
+                dolorem maiores tempore. Fuga, ipsa?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Eligendi officiis voluptatibus eos. Earum, corporis? Distinctio
+                magnam officiis dolorem delectus quae. Quo laudantium
+                doloremque, explicabo maxime dolore amet officia nihil
+                assumenda.
+              </p>
             </div>
-        </div> <!--final do conteudo -->
-
-    </div> <!--final container-->
-
-    <div id="footer" style="clear: both;"> <!--Footer-->
-        <div id="rodape">
-            &copy; Copyright 2000-2020 Notícias Cidade - Josiley Cesario Praxedes
+          </div>
         </div>
+      </div>
+      <!--final do conteudo -->
     </div>
+    <!--final container-->
 
-</body>
+    <div id="footer" style="clear: both">
+      <!--Footer-->
+      <div id="rodape">
+        &copy; Copyright 2000-2020 Notícias Cidade - Josiley Cesario Praxedes
+      </div>
+    </div>
+  </body>
 </html>
