--- a/brasil.html
+++ b/brasil.html
@@ -1,129 +1,160 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>Notícias da Cidade</title>
-</head>
-<body id="brasil" class="duas-colunas">
-    
-    <div id="container"> <!--inicio do container-->
-        <div id="topo">  <!--inicio do topo-->
-            <h1 class="logo">Notícias Cidade</h1>
-            <ul id="navegacao">
-                <li class="primeiro">
-                    <a href="index.html">Home</a>
+  </head>
+  <body id="brasil" class="duas-colunas">
+    <div id="container">
+      <!--inicio do container-->
+      <div id="topo">
+        <!--inicio do topo-->
+        <h1 class="logo">Notícias Cidade</h1>
+        <ul id="navegacao">
+          <li class="primeiro">
+            <a href="index.html">Home</a>
+          </li>
+          <li><a class="brasil" href="brasil.html">Brasil</a></li>
+          <li><a href="fotos.html">Fotos</a></li>
+          <li><a href="internacional.html">Internacional</a></li>
+          <li><a href="economia.html">Economia</a></li>
+          <li><a href="saude.html">Saúde</a></li>
+          <li><a href="ciencia.html">Ciência</a></li>
+        </ul>
+      </div>
+      <!--final topo-->
+
+      <div id="conteudo">
+        <!--inicio do conteudo-->
+
+        <div class="primario">
+          <!--inicio primario-->
+          <div class="caixa destaque">
+            <h2>Titulo da Notícia</h2>
+            <div class="caixa-conteudo">
+              <h3>
+                Pequeno resumo da notícia! - Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Iure possimus atque facere cum
+                consequatur
+              </h3>
+              <img
+                class="imagem-principal"
+                src="image/taxi.jpg"
+                alt="Dois táxi amarelos"
+                width="100%"
+              />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+                possimus atque facere cum consequatur numquam obcaecati
+                distinctio harum impedit et commodi libero non, labore adipisci,
+                dolorem maiores tempore. Fuga, ipsa?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Eligendi officiis voluptatibus eos. Earum, corporis? Distinctio
+                magnam officiis dolorem delectus quae. Quo laudantium
+                doloremque, explicabo maxime dolore amet officia nihil
+                assumenda.
+              </p>
+            </div>
+          </div>
+
+          <div class="caixa">
+            <h2>Notícias Recentes</h2>
+            <div class="caixa-conteudo">
+              <ul id="lista-noticias">
+                <li>
+                  <a href="">
+                    <img src="image/cidade.jpg" alt="" width="80" />
+                    <h3>Novas tecnólogias</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                  </a>
                 </li>
-                <li><a class="brasil" href="brasil.html">Brasil</a>
+                <li>
+                  <a href="">
+                    <img src="image/tecnologia.jpg" alt="" width="80" />
+                    <h3>Novas tecnólogias</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                  </a>
                 </li>
-                <li><a href="fotos.html">Fotos</a>
+                <li>
+                  <a href="">
+                    <img src="image/doutor.jpg" alt="" width="80" />
+                    <h3>Novas tecnólogias</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                  </a>
                 </li>
-                <li><a href="internacional.html">Internacional</a>
+                <li>
+                  <a href="">
+                    <img src="image/taxi.jpg" alt="" width="80" />
+                    <h3>Novas tecnólogias</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                  </a>
                 </li>
-                <li><a href="economia.html">Economia</a>
-                </li>
-                <li><a href="saude.html">Saúde</a>
-                </li>
-                <li><a href="ciencia.html">Ciência</a>
-                </li>
-            </ul>
-        </div> <!--final topo-->
-
-        <div id="conteudo"> <!--inicio do conteudo-->
-
-            <div class="primario"> <!--inicio primario-->
-                <div class="caixa destaque">
-                    <h2>Titulo da Notícia</h2>
-                    <div class="caixa-conteudo">
-                        <h3>Pequeno resumo da notícia! - Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus atque facere cum consequatur</h3>
-                        <img class="imagem-principal" src="image/taxi.jpg" alt="Dois táxi amarelos" width="100%">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus atque facere cum consequatur numquam obcaecati distinctio harum impedit et commodi libero non, labore adipisci, dolorem maiores tempore. Fuga, ipsa?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi officiis voluptatibus eos. Earum, corporis? Distinctio magnam officiis dolorem delectus quae. Quo laudantium doloremque, explicabo maxime dolore amet officia nihil assumenda.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="caixa">
-                    <h2>Notícias Recentes</h2>
-                    <div class="caixa-conteudo">
-                        <ul id="lista-noticias">
-                            <li>
-                                <a href="">
-                                    <img src="image/cidade.jpg" alt="" width="80">
-                                    <h3>Novas tecnólogias</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="image/tecnologia.jpg" alt="" width="80">
-                                    <h3>Novas tecnólogias</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="image/doutor.jpg" alt="" width="80">
-                                    <h3>Novas tecnólogias</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    <img src="image/taxi.jpg" alt="" width="80">
-                                    <h3>Novas tecnólogias</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                </a>
-                            </li>
-                            
-                        </ul>
-                    </div>
-                </div>
-            </div><!--final do primario-->
-
-            <div class="lateral"><!--inicio da lateral-->
-                <div class="caixa">
-                    <h2>Entrevistas</h2>
-                    <div class="caixa-conteudo">
-                        <ul>
-                            <li><a href="">José Almeida</a></li>
-                            <li><a href="">Lauriani Praxedes</a></li>
-                            <li><a href="">Rita Cardoso</a></li>
-                            <li><a href="">André Carlos</a></li>
-                            <li><a href="">Marcio Mello</a></li>
-                            <li><a href="">João Pedro</a></li>
-                            <li><a href="">Lucimar Luciana</a></li>
-
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="caixa">
-                    <h2>News</h2>
-                    <div class="caixa-conteudo">
-                        <form action="">
-                            <div>
-                                <label for="">Email:</label>
-                                <input type="email" name="email" id="email" placeholder="E-mail">
-                            </div>
-                            <div>
-                                <input class="submit" type="button" value="Enviar">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div><!--final da lateral-->
-
-        </div> <!--final do conteudo -->
-
-    </div> <!--final container-->
-
-    <div id="footer" style="clear: both;"> <!--Footer-->
-        <div id="rodape">
-            &copy; Copyright 2000-2020 Notícias Cidade - Josiley Cesario Praxedes
+              </ul>
+            </div>
+          </div>
         </div>
-    </div>
+        <!--final do primario-->
 
-</body>
+        <div class="lateral">
+          <!--inicio da lateral-->
+          <div class="caixa">
+            <h2>Entrevistas</h2>
+            <div class="caixa-conteudo">
+              <ul>
+                <li><a href="">José Almeida</a></li>
+                <li><a href="">Lauriani Praxedes</a></li>
+                <li><a href="">Rita Cardoso</a></li>
+                <li><a href="">André Carlos</a></li>
+                <li><a href="">Marcio Mello</a></li>
+                <li><a href="">João Pedro</a></li>
+                <li><a href="">Lucimar Luciana</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="caixa">
+            <h2>News</h2>
+            <div class="caixa-conteudo">
+              <form action="">
+                <div>
+                  <label for="">Email:</label>
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    placeholder="E-mail"
+                  />
+                </div>
+                <div>
+                  <input class="submit" type="button" value="Enviar" />
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <!--final da lateral-->
+      </div>
+      <!--final do conteudo -->
+    </div>
+    <!--final container-->
+
+    <div id="footer" style="clear: both">
+      <!--Footer-->
+      <div id="rodape">
+        &copy; Copyright 2000-2020 Notícias Cidade - Josiley Cesario Praxedes
+      </div>
+    </div>
+  </body>
 </html>
